# InfiRay_thermal_camera_for_ARM64

./: README.md
InfiRay_thermal_camera/: README.md
InfiRay_thermal_camera/src/: Demo_T_T.cpp  main_v8_max_temperature_detect.cpp  thermal_camera_ui.py  thermal_camera_ui_fixed_fast.py  thermal_camera_ui_mission_state.py  thermal_fast_v8
InfiRay_thermal_camera/src/infiray_ros2/: CMakeLists.txt  package.xml
InfiRay_thermal_camera/src/infiray_ros2/env-hooks/: infiray_sdk_library_path.dsv.in  infiray_sdk_library_path.sh.in
InfiRay_thermal_camera/src/infiray_ros2/src/: infiray_old.cpp  infiray_ros2_frame_limit.cpp  infiray_with_ros2.cpp  infiray_with_ros2_fixed_fast.cpp
